{
    "version": 1,
    "name": "ReadyInputAction",
    "maps": [
        {
            "name": "Ready",
            "id": "154212f7-582d-49c2-ad9e-46118cb54a49",
            "actions": [
                {
                    "name": "OpenInventory",
                    "type": "Button",
                    "id": "92078a0f-7093-4d8a-94a0-21725d8b894b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2d2317ab-ff14-4796-ae7f-b2f4b0dbc30c",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "25e978be-9aac-4083-90b3-37a7ee0a72a6",
            "actions": [
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "8cd6c163-8585-44ab-b213-106981548fad",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CloseInventory",
                    "type": "Button",
                    "id": "b01a7cb0-4000-4b1b-a933-ad165b79d0ae",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "beefabed-ae1f-4e9f-9806-624d6abf75c8",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72010356-ff02-4395-b18f-74e6defe3b4c",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}